--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
+    "@vue/cli-plugin-babel/preset": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.5",
     "@vue/cli-service": "^4.0.0",
