--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+     "@babel/preset-env": "7.7.6",
     "buefy": "^0.8.6",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
