--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-     "@babel/preset-env": "7.7.6",
     "buefy": "^0.8.6",
     "core-js": "^3.3.2",
+    "image-map": "^1.1.7",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel/preset": "^4.0.0",
+    "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-plugin-router": "^4.0.5",
     "@vue/cli-service": "^4.0.0",
